@@ -1,4 +1,8 @@
-﻿[COLOR yellow][B]wersja 9.3.2[/B] - 2021-05-19[/COLOR]
+﻿[COLOR yellow][B]wersja 9.3.3[/B] - 2021-05-20[/COLOR]
+- optymalizacje
+- usunięte błędy
+
+[COLOR yellow][B]wersja 9.3.2[/B] - 2021-05-19[/COLOR]
 - poprawka memoryerror przy szybkim parsowaniu epg
 - poprawiono wydajność działania
 - usunięte błędy
